2021-12-06  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* VERSION:
	* NEWS:
	* contribs.svn:
	updated LundPlane to 2.0.0 and prepared for release of
	fjcontrib-1.047

2021-08-21 Sat  <gavin.salam@physics.ox.ac.uk>

	* NEWS:
	* VERSION:
	* contribs.svn:
	updated RecursiveTools to 2.0.1 and prepared for release
	of fjcontrib-1.046

2020-08-04 Tue  <gavin.salam@physics.ox.ac.uk>

	* NEWS:
	* VERSION:
	Preparing for release of 1.045

	* contribs.svn:
	added Centauro (DIS jet algorithm plugin) 1.0.0

2020-03-07  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION:
	* NEWS:
	Preparing for release of 1.044

	* contribs.svn:
	updated RecursiveTools to 2.0.0

2020-02-23  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS:
	* VERSION:
	preparing for release of 1.043

	* README:
	added note about need for c++11 here if FJ was compiled with
	c++11. 

	* contribs.svn:
	updated ConstituentSubtractor to 1.4.5 and LundPlane to 1.0.3 to
	fix c++98 compatibility issues

2019-07-18  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS: 
	* VERSION: 
	* contribs.svn:
	ConstituentSubtractor updated to 1.4.4,
	prepared release of fjcontrib-1.042

2018-12-22  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION:
	* NEWS:
	* contribs.svn:
	updated ValenciaPlugin to 2.0.2 with bug fixes for negative beta.
	Prepared for release of fjcontrib-1.041

2018-12-04  Gavin Salam  <gavin.salam@cern.ch>

	* DEVEL-GUIDELINES:
	* scripts/internal/common.sh (svn_read): 
	* README:
	updated links for read-only access.

2018-12-04  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS: 
	* VERSION:
	prepared for release of 1.040 with ValenciaPlugin 2.0.1

	* contribs.svn:
	updated ValenciaPlugin to 2.0.1

2018-10-31  Gavin Salam  <gavin.salam@cern.ch>

	* scripts/internal/generate-html-contents.pl:
	* scripts/internal/common.sh:

	fixed issue with incorrect links generate-html-contents.pl and
	made it import svn_read address from environment variables set in
	common.sh

2018-10-31  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS: 
	* VERSION: