@@ -1,0 +1,7 @@
+# get the parent directory makefile
+FJCDIR=..
+-include $(FJCDIR)/Makefile
+-include $(FJCDIR)/.Makefile.inc
+
+c11check: c11check.o
+	$(CXX) $(CXXFLAGS) c11check.o -o c11check
